--- a/sit/pom.xml
+++ b/sit/pom.xml
@@ -3,7 +3,7 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sunlifeph</groupId>
-  <artifactId>sunlife-sit</artifactId>
+  <artifactId>sunlife</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
   <name>sunlife-sit</name>
